@@ -27,6 +27,7 @@
           <para>4419, Use protobuf version to enable/disable mvt/geobuf (Paul Ramsey)</para>
           <para>4437, Handle POINT EMPTY in shape loader/dumper (Paul Ramsey)</para>
           <para>4456, add Rasbery Pi 32-bit jenkins bot for testing (Bruce Rindahl,Regina Obe)</para>
+          <para>4420, update path does not exists for address_standardizer extension (Regina Obe)</para>
       </simplesect>
     </sect1>
 
