@@ -21,6 +21,7 @@ Additional features enabled if you are running Proj6+ and PostgreSQL 12
   - #4419, Use protobuf version to enable/disable mvt/geobuf (Paul Ramsey)
   - #4437, Handle POINT EMPTY in shape loader/dumper (Paul Ramsey)
   - #4456, add Rasbery Pi 32-bit jenkins bot for testing (Bruce Rindahl,Regina Obe)
+  - #4420, update path does not exists for address_standardizer extension (Regina Obe)
 
 PostGIS 3.0.0alpha3
 2019/07/01
